Closed
Bug 782552
Opened 13 years ago
Closed 13 years ago
Nightly not responding properly to left/right trackpad swipes
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Tracking
()
RESOLVED
FIXED
mozilla17
People
(Reporter: notforyourmail, Assigned: masayuki)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
2.42 KB,
patch
|
smaug
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:17.0) Gecko/17.0 Firefox/17.0
Build ID: 20120813030532
Steps to reproduce:
Swipe left or right on my trackpad to move back or forward through my tab's history.
Actual results:
On some pages, such as craigslist.org searches, swiping fails completely. I must click on the back button to go back. On other pages (nytimes.com, macrumors.com, in the same history list), I must swipe *twice* before anything happens.
Expected results:
Swiping should cause the previous or next page to display, depending on swipe direction. This worked reliably until a build from 3 or 4 days ago.
| Assignee | ||
Comment 1•13 years ago
|
||
Hmm, this could be a regression of bug 719320.
| Assignee | ||
Comment 2•13 years ago
|
||
Okay, this is my fault.
Assignee: nobody → masayuki
Blocks: 719320
Severity: normal → major
Status: UNCONFIRMED → ASSIGNED
Component: Untriaged → Event Handling
Ever confirmed: true
Keywords: regression
Product: Firefox → Core
Version: 17 Branch → Trunk
| Assignee | ||
Comment 3•13 years ago
|
||
If there is no scrollable frame for the wheel event, we don't set overflowDelta*. Then, widget understands that the wheel event is consumed. We should always set overflowDelta* when the action is "scroll".
Attachment #651728 -
Flags: review?(bugs)
Updated•13 years ago
|
Attachment #651728 -
Flags: review?(bugs) → review+
Comment 4•13 years ago
|
||
Also seeing this: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:17.0) Gecko/17.0 Firefox/17.0
| Assignee | ||
Comment 5•13 years ago
|
||
Target Milestone: --- → mozilla17
Comment 8•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Comment 10•12 years ago
|
||
(In reply to comment #9)
Nope. That's a new bug -- bug 860779.
Updated•6 years ago
|
Component: Event Handling → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•