Bug 782552 Set overflow delta values even if there is no scroll target for the wheel event r=smaug